--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,14 @@
 name = "clypper"
 version = "0.0.1"
 description = "Rapidly create supercuts from various video sources."
+
 authors = ["kpj <kpjkpjkpjkpjkpjkpj@gmail.com>"]
 license = "MIT"
+
+readme = "README.md"
+
+repository = "https://github.com/kpj/clypper"
+
 
 [tool.poetry.dependencies]
 python = "^3.6"
@@ -14,10 +20,16 @@ moviepy = "^1.0.3"
 tqdm = "^4.46.0"
 pytimeparse = "^1.1.8"
 
+
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
 tox = "^3.15.1"
 
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+
+[tool.poetry.scripts]
+clypper = "clypper:main"
