--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,13 @@ pytimeparse = "^1.1.8"
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
 tox = "^3.15.1"
+bump2version = "^1.0.0"
+
+
+[tool.poetry.scripts]
+clypper = "clypper:main"
 
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-
-[tool.poetry.scripts]
-clypper = "clypper:main"
